--- a/reaction.html
+++ b/reaction.html
@@ -27,19 +27,16 @@
       console.log(myTime)
     }
     function startTime() {
-      for (let i = 0; i < 4; i++) {
-        setTimeout(() => {
-          document.getElementById("countdown").innerHTML = "Count: " + i
-        }, (3 - i) * 1000)
-      }
-      setTimeout(() => {
-        checkMyTime()
-      }, 3000)
-    }
-    setTimeout(() => {
-      checkMyTime()
-    }, 3000)
-  
+      var startCount = Math.floor(Math.random() * 10 + 2)
+            for (let i = 0; i < startCount; i++) {
+                setTimeout(() => {
+                    document.getElementById("countdown").innerHTML = "Count: " + i
+                }, (startCount - i) * 1000)
+            }
+            setTimeout(() => {
+                checkMyTime()
+            }, startCount * 1000)
+        }
 
     function checkMyTime() {
       var element = document.getElementById("target")
