--- a/stack.html
+++ b/stack.html
@@ -67,6 +67,17 @@
             }
         }
     }
+    function unique(){
+        var stackItems = document.getElementsByClassName("stack")
+		for(var i=0; i<stackItems.length; i++){
+			for(var j=i+1; j<stackItems.length; j++){
+                if(stackItems[i].innerHTML == stackItems[j].innerHTML){
+                    stackItems[j].remove()
+                    j--;i--
+                }
+            }
+		}
+    }
    
 </script>
 </html>	
